[tool.poetry]
name = "KML"
version = "0.1.0"
description = ""
authors = ["João Vitor Camelo <133178723+joaovitorcamelo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
gspread = "^5.10.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
