[tool.poetry]
name = "KML"
version = "0.1.0"
description = ""
authors = ["João Vitor Camelo <133178723+joaovitorcamelo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
gspread = "^5.10.0"
gunicorn = "^20.1.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
google-api-python-client = "^2.93.0"
google-auth = "^2.22.0"
google-auth-oauthlib = "^1.0.0"
google-auth-httplib2 = "^0.1.0"
mysqlclient = "^2.2.0"
python-dotenv = "^1.0.0"
django-cors-headers = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
